--- a/person.html
+++ b/person.html
@@ -7,88 +7,103 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
-        body { font-family: 'Kanit', sans-serif; }
-        .glass-card {
-            background: rgba(255, 255, 255, 0.8);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.3);
+        body { font-family: 'Kanit', sans-serif; background-color: #f8fafc; }
+        .person-card {
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
         }
-        .profile-gradient {
-            background: linear-gradient(135deg, #6366f1 0%, #a855f7 100%);
+        .person-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
         }
     </style>
 </head>
-<body class="bg-slate-50 min-h-screen py-16 px-4">
+<body class="py-20 px-6">
 
-    <div class="max-w-7xl mx-auto">
-        <div class="text-center mb-20">
-            <span class="text-indigo-600 font-semibold tracking-widest uppercase text-sm">Professional Team</span>
-            <h1 class="text-4xl md:text-5xl font-bold text-slate-800 mt-3">คณะบุคลากรงานทะเบียน</h1>
-            <div class="w-24 h-1.5 bg-indigo-600 mx-auto mt-6 rounded-full"></div>
+    <div class="max-w-6xl mx-auto">
+        <div class="text-center mb-16">
+            <h2 class="text-indigo-600 font-semibold tracking-widest uppercase text-xs mb-2">Our Team</h2>
+            <h1 class="text-4xl font-bold text-slate-800">บุคลากรงานทะเบียนและวัดผล</h1>
+            <p class="text-slate-500 mt-4 max-w-lg mx-auto font-light">มุ่งมั่นให้บริการงานทะเบียนด้วยความถูกต้อง รวดเร็ว และเป็นระบบเพื่อประโยชน์สูงสุดของนักเรียน</p>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             
-            <div class="lg:col-span-3 flex justify-center mb-10">
-                <div class="glass-card group relative w-full max-w-md p-8 rounded-[2rem] shadow-2xl shadow-indigo-100 text-center transition-all duration-500 hover:-translate-y-2">
-                    <div class="absolute -top-12 left-1/2 -translate-x-1/2">
-                        <div class="w-32 h-32 rounded-3xl profile-gradient p-1 rotate-12 group-hover:rotate-0 transition-transform duration-500 shadow-xl">
-                            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Felix" alt="leader" class="w-full h-full rounded-[1.4rem] bg-white object-cover">
-                        </div>
-                    </div>
-                    <div class="mt-20">
-                        <h3 class="text-2xl font-bold text-slate-800">ดร. สมชาย มุ่งมั่น</h3>
-                        <p class="text-indigo-600 font-medium mb-6 uppercase tracking-tight text-sm">หัวหน้างานทะเบียนและวัดผล</p>
-                        <div class="flex justify-center gap-3">
-                            <button class="w-10 h-10 rounded-xl bg-slate-100 text-slate-600 hover:bg-indigo-600 hover:text-white transition-colors"><i class="fa-solid fa-envelope"></i></button>
-                            <button class="w-10 h-10 rounded-xl bg-slate-100 text-slate-600 hover:bg-indigo-600 hover:text-white transition-colors"><i class="fa-solid fa-phone"></i></button>
-                        </div>
-                    </div>
+            <div class="person-card bg-white p-8 rounded-[2.5rem] text-center border border-slate-100">
+                <div class="relative w-32 h-32 mx-auto mb-6">
+                    <div class="absolute inset-0 bg-indigo-500 rounded-full scale-105 opacity-10"></div>
+                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=1" class="relative w-full h-full rounded-full bg-slate-50 border-4 border-white shadow-sm object-cover">
+                </div>
+                <h3 class="text-xl font-bold text-slate-800 leading-tight">นายสมชาย มุ่งดี</h3>
+                <p class="text-indigo-600 text-sm font-medium mt-1 mb-4">หัวหน้างานทะเบียน</p>
+                <div class="flex justify-center gap-2">
+                    <button class="w-9 h-9 rounded-full bg-slate-50 text-slate-400 hover:bg-indigo-600 hover:text-white transition-all"><i class="fa-solid fa-envelope text-xs"></i></button>
+                    <button class="w-9 h-9 rounded-full bg-slate-50 text-slate-400 hover:bg-indigo-600 hover:text-white transition-all"><i class="fa-solid fa-phone text-xs"></i></button>
                 </div>
             </div>
 
-            <div class="glass-card group p-6 rounded-[2rem] shadow-xl shadow-slate-200/50 text-center transition-all duration-300 hover:shadow-2xl hover:shadow-indigo-100">
-                <div class="w-24 h-24 mx-auto mb-6 relative">
-                    <div class="absolute inset-0 bg-indigo-200 rounded-2xl rotate-6 group-hover:rotate-12 transition-transform"></div>
-                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Aneka" class="relative w-full h-full rounded-2xl bg-white border border-slate-100 object-cover shadow-sm">
+            <div class="person-card bg-white p-8 rounded-[2.5rem] text-center border border-slate-100">
+                <div class="relative w-32 h-32 mx-auto mb-6">
+                    <div class="absolute inset-0 bg-blue-500 rounded-full scale-105 opacity-10"></div>
+                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=2" class="relative w-full h-full rounded-full bg-slate-50 border-4 border-white shadow-sm object-cover">
                 </div>
-                <h3 class="text-lg font-bold text-slate-800">น.ส. ใจดี รักษ์งาน</h3>
-                <p class="text-slate-500 text-sm mb-4">เจ้าหน้าที่งานทะเบียน</p>
-                <div class="h-[1px] w-12 bg-slate-200 mx-auto mb-4"></div>
-                <p class="text-xs text-slate-400"><i class="fa-solid fa-location-dot mr-1"></i> อาคาร 1 ห้อง 102</p>
+                <h3 class="text-xl font-bold text-slate-800 leading-tight">น.ส.ใจดี มานะ</h3>
+                <p class="text-indigo-600 text-sm font-medium mt-1 mb-4">เจ้าหน้าที่งานทะเบียน</p>
+                <div class="flex justify-center gap-2">
+                    <button class="w-9 h-9 rounded-full bg-slate-50 text-slate-400 hover:bg-indigo-600 hover:text-white transition-all"><i class="fa-solid fa-envelope text-xs"></i></button>
+                    <button class="w-9 h-9 rounded-full bg-slate-50 text-slate-400 hover:bg-indigo-600 hover:text-white transition-all"><i class="fa-solid fa-phone text-xs"></i></button>
+                </div>
             </div>
 
-            <div class="glass-card group p-6 rounded-[2rem] shadow-xl shadow-slate-200/50 text-center transition-all duration-300 hover:shadow-2xl hover:shadow-indigo-100">
-                <div class="w-24 h-24 mx-auto mb-6 relative">
-                    <div class="absolute inset-0 bg-purple-200 rounded-2xl rotate-6 group-hover:rotate-12 transition-transform"></div>
-                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Sincere" class="relative w-full h-full rounded-2xl bg-white border border-slate-100 object-cover shadow-sm">
+            <div class="person-card bg-white p-8 rounded-[2.5rem] text-center border border-slate-100">
+                <div class="relative w-32 h-32 mx-auto mb-6">
+                    <div class="absolute inset-0 bg-purple-500 rounded-full scale-105 opacity-10"></div>
+                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=3" class="relative w-full h-full rounded-full bg-slate-50 border-4 border-white shadow-sm object-cover">
                 </div>
-                <h3 class="text-lg font-bold text-slate-800">นาย วิชาการ แม่นยำ</h3>
-                <p class="text-slate-500 text-sm mb-4">เจ้าหน้าที่วัดผล</p>
-                <div class="h-[1px] w-12 bg-slate-200 mx-auto mb-4"></div>
-                <p class="text-xs text-slate-400"><i class="fa-solid fa-location-dot mr-1"></i> อาคาร 1 ห้อง 102</p>
+                <h3 class="text-xl font-bold text-slate-800 leading-tight">นายพิชิต ผลงาน</h3>
+                <p class="text-indigo-600 text-sm font-medium mt-1 mb-4">หัวหน้างานวัดผล</p>
+                <div class="flex justify-center gap-2">
+                    <button class="w-9 h-9 rounded-full bg-slate-50 text-slate-400 hover:bg-indigo-600 hover:text-white transition-all"><i class="fa-solid fa-envelope text-xs"></i></button>
+                    <button class="w-9 h-9 rounded-full bg-slate-50 text-slate-400 hover:bg-indigo-600 hover:text-white transition-all"><i class="fa-solid fa-phone text-xs"></i></button>
+                </div>
             </div>
 
-            <div class="glass-card group p-6 rounded-[2rem] shadow-xl shadow-slate-200/50 text-center transition-all duration-300 hover:shadow-2xl hover:shadow-indigo-100">
-                <div class="w-24 h-24 mx-auto mb-6 relative">
-                    <div class="absolute inset-0 bg-blue-200 rounded-2xl rotate-6 group-hover:rotate-12 transition-transform"></div>
-                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Jack" class="relative w-full h-full rounded-2xl bg-white border border-slate-100 object-cover shadow-sm">
+            <div class="person-card bg-white p-8 rounded-[2.5rem] text-center border border-slate-100">
+                <div class="relative w-32 h-32 mx-auto mb-6">
+                    <div class="absolute inset-0 bg-pink-500 rounded-full scale-105 opacity-10"></div>
+                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=4" class="relative w-full h-full rounded-full bg-slate-50 border-4 border-white shadow-sm object-cover">
                 </div>
-                <h3 class="text-lg font-bold text-slate-800">นาย ไอที เก่งกาจ</h3>
-                <p class="text-slate-500 text-sm mb-4">นักจัดการข้อมูล</p>
-                <div class="h-[1px] w-12 bg-slate-200 mx-auto mb-4"></div>
-                <p class="text-xs text-slate-400"><i class="fa-solid fa-location-dot mr-1"></i> ศูนย์คอมพิวเตอร์</p>
+                <h3 class="text-xl font-bold text-slate-800 leading-tight">น.ส.วิไล รักษ์ดี</h3>
+                <p class="text-indigo-600 text-sm font-medium mt-1 mb-4">เจ้าหน้าที่งานวัดผล</p>
+                <div class="flex justify-center gap-2">
+                    <button class="w-9 h-9 rounded-full bg-slate-50 text-slate-400 hover:bg-indigo-600 hover:text-white transition-all"><i class="fa-solid fa-envelope text-xs"></i></button>
+                    <button class="w-9 h-9 rounded-full bg-slate-50 text-slate-400 hover:bg-indigo-600 hover:text-white transition-all"><i class="fa-solid fa-phone text-xs"></i></button>
+                </div>
             </div>
 
-            <div class="glass-card group p-6 rounded-[2rem] shadow-xl shadow-slate-200/50 text-center transition-all duration-300 hover:shadow-2xl hover:shadow-indigo-100 md:col-start-2 lg:col-start-auto">
-                <div class="w-24 h-24 mx-auto mb-6 relative">
-                    <div class="absolute inset-0 bg-pink-200 rounded-2xl rotate-6 group-hover:rotate-12 transition-transform"></div>
-                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Molly" class="relative w-full h-full rounded-2xl bg-white border border-slate-100 object-cover shadow-sm">
+            <div class="person-card bg-white p-8 rounded-[2.5rem] text-center border border-slate-100">
+                <div class="relative w-32 h-32 mx-auto mb-6">
+                    <div class="absolute inset-0 bg-teal-500 rounded-full scale-105 opacity-10"></div>
+                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=5" class="relative w-full h-full rounded-full bg-slate-50 border-4 border-white shadow-sm object-cover">
                 </div>
-                <h3 class="text-lg font-bold text-slate-800">น.ส. ประสานงาน คล่องแคล่ว</h3>
-                <p class="text-slate-500 text-sm mb-4">เลขานุการงานทะเบียน</p>
-                <div class="h-[1px] w-12 bg-slate-200 mx-auto mb-4"></div>
-                <p class="text-xs text-slate-400"><i class="fa-solid fa-location-dot mr-1"></i> อาคาร 1 ห้องประชาสัมพันธ์</p>
+                <h3 class="text-xl font-bold text-slate-800 leading-tight">นายเก่ง เทคโนโลยี</h3>
+                <p class="text-indigo-600 text-sm font-medium mt-1 mb-4">นักจัดการข้อมูลระบบ</p>
+                <div class="flex justify-center gap-2">
+                    <button class="w-9 h-9 rounded-full bg-slate-50 text-slate-400 hover:bg-indigo-600 hover:text-white transition-all"><i class="fa-solid fa-envelope text-xs"></i></button>
+                    <button class="w-9 h-9 rounded-full bg-slate-50 text-slate-400 hover:bg-indigo-600 hover:text-white transition-all"><i class="fa-solid fa-phone text-xs"></i></button>
+                </div>
+            </div>
+
+            <div class="person-card bg-white p-8 rounded-[2.5rem] text-center border border-slate-100">
+                <div class="relative w-32 h-32 mx-auto mb-6">
+                    <div class="absolute inset-0 bg-orange-500 rounded-full scale-105 opacity-10"></div>
+                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=6" class="relative w-full h-full rounded-full bg-slate-50 border-4 border-white shadow-sm object-cover">
+                </div>
+                <h3 class="text-xl font-bold text-slate-800 leading-tight">น.ส.กานดา ประสานงาน</h3>
+                <p class="text-indigo-600 text-sm font-medium mt-1 mb-4">เลขานุการ</p>
+                <div class="flex justify-center gap-2">
+                    <button class="w-9 h-9 rounded-full bg-slate-50 text-slate-400 hover:bg-indigo-600 hover:text-white transition-all"><i class="fa-solid fa-envelope text-xs"></i></button>
+                    <button class="w-9 h-9 rounded-full bg-slate-50 text-slate-400 hover:bg-indigo-600 hover:text-white transition-all"><i class="fa-solid fa-phone text-xs"></i></button>
+                </div>
             </div>
 
         </div>
