--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     
     <style>
         :root {
-            --primary: #0056b3;
-            --primary-light: #e7f1ff;
-            --secondary: #6c757d;
+            --primary: #6c5ce7;
+            --primary-light: #f1f0ff;
+            --secondary: #a29bfe;
             --danger: #dc3545;
             --bg-body: #f0f2f5;
             --white: #ffffff;
             --text-main: #2d3436;
-            --shadow: 0 10px 30px rgba(0,0,0,0.08);
+            --shadow: 4px 4px 0px rgba(0,0,0,0.05);
         }
 
-        /* ❌ ไม่เอาขอบมน: บังคับทุกอย่างให้เป็นเหลี่ยมคมตามสั่ง */
+        /* ❌ ไม่เอาขอบมน: บังคับทุกอย่างให้เป็นเหลี่ยมคม */
         * { 
             box-sizing: border-box; 
             margin: 0; 
@@ -52,7 +52,6 @@
             display: flex;
             flex-direction: column;
             gap: 2rem;
-            z-index: 50;
         }
 
         .brand { text-align: center; padding-bottom: 1rem; border-bottom: 2px solid var(--primary-light); }
@@ -61,7 +60,6 @@
 
         .nav-menu { list-style: none; }
         .nav-label { font-size: 0.8rem; font-weight: 700; color: var(--secondary); text-transform: uppercase; margin-bottom: 1rem; letter-spacing: 1px; }
-        .nav-item { margin-bottom: 0.5rem; }
         .nav-link {
             display: flex; align-items: center; gap: 12px; padding: 12px 15px;
             text-decoration: none; color: var(--text-main); transition: 0.3s; font-weight: 500;
@@ -70,7 +68,6 @@
         .nav-link:hover, .nav-link.active { background-color: var(--primary-light); color: var(--primary); border-left: 4px solid var(--primary); }
         .nav-link.active { background-color: var(--primary); color: var(--white); }
 
-        /* Main Content */
         main { padding: 2rem; width: 100%; max-width: 1400px; margin: 0 auto; }
 
         header.top-bar {
@@ -79,23 +76,7 @@
             border: 1px solid #ddd; border-bottom: 4px solid var(--primary);
         }
 
-        .top-bar-right { display: flex; align-items: center; gap: 20px; }
-
-        .admin-login-btn {
-            background-color: var(--danger);
-            color: white; padding: 10px 20px;
-            text-decoration: none; font-weight: 600; font-size: 0.9rem;
-            display: flex; align-items: center; gap: 8px; transition: 0.3s;
-        }
-
-        /* Banner Style - Sharp */
-        #test-banner {
-            border-left: 6px solid #f59e0b;
-            background-color: #fffbeb;
-            transition: all 0.5s ease;
-        }
-
-        /* System Menu - Sharp & Compact */
+        /* --- System Menu (Sharp & Compact) --- */
         .system-selection {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -111,33 +92,30 @@
             text-decoration: none;
             color: var(--text-main);
             border: 1px solid #ddd;
+            border-left: 5px solid var(--primary);
             transition: 0.3s;
         }
-        .system-mini-card:hover { border-color: var(--primary); transform: translateX(5px); }
-        .sys-icon-small {
-            width: 35px; height: 35px;
-            display: flex; align-items: center; justify-content: center; color: white;
-        }
+        .system-mini-card:hover { transform: translateX(5px); background-color: var(--primary-light); }
 
-        /* Countdown - Sharp with Mesh */
+        /* --- Countdown with Wavy Lines --- */
         @keyframes mesh-move {
             0% { background-position-x: 0; }
             100% { background-position-x: 1000px; }
         }
         .card-countdown {
             position: relative; overflow: hidden;
-            background: linear-gradient(135deg, #0056b3 0%, #00a8ff 100%);
+            background: linear-gradient(135deg, #6c5ce7 0%, #a29bfe 100%);
             color: var(--white); padding: 2.5rem;
             text-align: center; margin-bottom: 2.5rem;
-            z-index: 1; border: 1px solid #004494;
+            z-index: 1; border: 1px solid #5a4bd1;
         }
         .wavy-lines-bg {
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1000" height="300"><path d="M0 150 Q 250 50 500 150 T 1000 150" fill="none" stroke="rgba(255,255,255,0.1)" stroke-width="2"/></svg>');
+            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1000" height="300"><path d="M0 150 Q 250 50 500 150 T 1000 150" fill="none" stroke="rgba(255,255,255,0.15)" stroke-width="2"/></svg>');
             background-size: 1000px 100%; z-index: -1; animation: mesh-move 20s infinite linear;
         }
         .timer-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 1rem; max-width: 500px; margin: 1.5rem auto; }
-        .timer-box { background: rgba(255, 255, 255, 0.2); backdrop-filter: blur(10px); padding: 1rem; border: 1px solid rgba(255,255,255,0.3); }
+        .timer-box { background: rgba(255, 255, 255, 0.1); border: 1px solid rgba(255,255,255,0.2); padding: 1rem; }
         .t-num { font-size: 2rem; font-weight: 700; display: block; }
 
         /* Statistics Sharp */
@@ -146,7 +124,7 @@
             border: 1px solid #ddd; border-bottom: 4px solid #ddd;
             display: flex; flex-direction: column; gap: 1rem; transition: 0.4s;
         }
-        .stat-card:hover { transform: translateY(-5px); }
+        .stat-card:hover { transform: translate(-3px, -3px); box-shadow: var(--shadow); }
 
         @media (max-width: 1100px) {
             .dashboard-container { grid-template-columns: 1fr; }
@@ -174,48 +152,29 @@
     <main>
         <header class="top-bar">
             <div class="welcome-text"><h1 class="text-xl font-bold uppercase tracking-tight">งานทะเบียนวัดผล ฝ่ายประมวลผล GPA</h1></div>
-            <div class="top-bar-right">
-                <div class="user-info" style="font-size: 0.8rem; font-weight: 700; color: var(--secondary);">
-                    <i class="far fa-clock"></i> <span id="current-time">กำลังโหลด...</span>
-                </div>
-                <a href="admin-login.html" class="admin-login-btn hover:bg-red-700">
-                    <i class="fas fa-user-shield"></i> ADMIN LOGIN
+            <div class="top-bar-right flex items-center gap-5">
+                <div id="current-time" class="text-xs font-bold text-slate-500 hidden md:block"></div>
+                <a href="admin-login.html" class="bg-red-600 text-white px-5 py-2 font-bold text-sm hover:bg-red-700 transition-all">
+                    <i class="fas fa-user-shield mr-2"></i> ADMIN LOGIN
                 </a>
             </div>
         </header>
 
-        <div id="test-banner" class="mb-6 border border-amber-200 shadow-sm">
-            <div class="flex items-center justify-between p-4 px-6">
-                <div class="flex items-center gap-4">
-                    <div class="flex-shrink-0 text-amber-600 animate-pulse">
-                        <i class="fa-solid fa-circle-exclamation text-xl"></i>
-                    </div>
-                    <div>
-                        <span class="font-bold text-amber-900 block md:inline">ขณะนี้อยู่ระหว่างทดสอบระบบ:</span>
-                        <span class="text-amber-800 text-sm ml-0 md:ml-2">ข้อมูลบางส่วนอาจมีการเปลี่ยนแปลง โปรดตรวจสอบความถูกต้องก่อนอ้างอิง</span>
-                    </div>
-                </div>
-                <button onclick="document.getElementById('test-banner').style.display='none'" class="text-amber-400 hover:text-amber-600 transition-colors">
-                    <i class="fa-solid fa-xmark"></i>
-                </button>
-            </div>
-        </div>
-
         <section class="system-selection">
             <a href="teacher-login.html" class="system-mini-card">
-                <div class="sys-icon-small" style="background-color: var(--primary);"><i class="fas fa-chalkboard-teacher"></i></div>
-                <span style="font-weight: 700;">ระบบสำหรับครู</span>
+                <i class="fas fa-chalkboard-teacher text-purple-600 text-xl"></i>
+                <span class="font-bold">ระบบสำหรับครู</span>
             </a>
-            <a href="student-login.html" class="system-mini-card">
-                <div class="sys-icon-small" style="background-color: #00a8ff;"><i class="fas fa-user-graduate"></i></div>
-                <span style="font-weight: 700;">ระบบสำหรับนักเรียน</span>
+            <a href="student-login.html" class="system-mini-card" style="border-left-color: #00a8ff;">
+                <i class="fas fa-user-graduate text-blue-500 text-xl"></i>
+                <span class="font-bold">ระบบสำหรับนักเรียน</span>
             </a>
         </section>
 
         <section class="card-countdown">
             <div class="wavy-lines-bg"></div>
             <div style="position: relative; z-index: 2;">
-                <h2 style="font-weight: 700;" class="text-lg md:text-xl uppercase tracking-tight">กำหนดการส่งเกรด (ก่อนกลางภาค/สอบกลางภาค) 2568/2</h2>
+                <h2 class="text-xl font-bold uppercase tracking-tight">กำหนดการส่งเกรด (ก่อนกลางภาค/สอบกลางภาค) 2568/2</h2>
                 
                 <div style="margin-top: 15px; display: inline-block; background-color: #ffffff; padding: 5px 15px;">
                     <span style="color: #ff0000; font-weight: 700; text-decoration: underline;">ไม่เกินเที่ยงคืน</span>
@@ -223,40 +182,37 @@
                 </div>
 
                 <div id="timer" class="timer-grid">
-                    <div class="timer-box"><span id="days" class="t-num">00</span><span>วัน</span></div>
-                    <div class="timer-box"><span id="hours" class="t-num">00</span><span>ชั่วโมง</span></div>
-                    <div class="timer-box"><span id="minutes" class="t-num">00</span><span>นาที</span></div>
-                    <div class="timer-box"><span id="seconds" class="t-num">00</span><span>วินาที</span></div>
+                    <div class="timer-box"><span id="days" class="t-num">00</span><span class="text-[10px] font-bold uppercase opacity-60">วัน</span></div>
+                    <div class="timer-box"><span id="hours" class="t-num">00</span><span class="text-[10px] font-bold uppercase opacity-60">ชั่วโมง</span></div>
+                    <div class="timer-box"><span id="minutes" class="t-num">00</span><span class="text-[10px] font-bold uppercase opacity-60">นาที</span></div>
+                    <div class="timer-box"><span id="seconds" class="t-num">00</span><span class="text-[10px] font-bold uppercase opacity-60">วินาที</span></div>
                 </div>
             </div>
         </section>
 
         <section class="stats-container">
-            <div class="stats-header border-l-4 border-blue-700 pl-4 mb-6">
-                <h3 class="font-bold text-blue-800 uppercase tracking-tighter">สถิติงานวิชาการ 2568</h3>
-            </div>
             <div class="stats-grid">
                 <div class="stat-card">
-                    <div class="stat-icon bg-grad-blue"><i class="fas fa-book-open"></i></div>
-                    <div class="stat-info"><span class="stat-value text-2xl">203</span><div class="stat-label uppercase text-[10px] tracking-widest mt-1">วิชาที่เปิดสอน</div></div>
+                    <p class="text-xs font-bold text-slate-400 uppercase tracking-widest">วิชาที่เปิดสอน</p>
+                    <span class="text-3xl font-bold text-purple-600">203</span>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-icon bg-grad-green"><i class="fas fa-chalkboard-teacher"></i></div>
-                    <div class="stat-info"><span class="stat-value text-2xl">112</span><div class="stat-label uppercase text-[10px] tracking-widest mt-1">บุคลากร</div></div>
+                    <p class="text-xs font-bold text-slate-400 uppercase tracking-widest">บุคลากร</p>
+                    <span class="text-3xl font-bold text-purple-600">112</span>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-icon bg-grad-orange"><i class="fas fa-user-graduate"></i></div>
-                    <div class="stat-info"><span class="stat-value text-2xl">2,262</span><div class="stat-label uppercase text-[10px] tracking-widest mt-1">นักเรียน</div></div>
+                    <p class="text-xs font-bold text-slate-400 uppercase tracking-widest">นักเรียน</p>
+                    <span class="text-3xl font-bold text-purple-600">2,262</span>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-icon bg-grad-red"><i class="fas fa-school"></i></div>
-                    <div class="stat-info"><span class="stat-value text-2xl">60</span><div class="stat-label uppercase text-[10px] tracking-widest mt-1">ห้องเรียน</div></div>
+                    <p class="text-xs font-bold text-slate-400 uppercase tracking-widest">ห้องเรียน</p>
+                    <span class="text-3xl font-bold text-purple-600">60</span>
                 </div>
             </div>
         </section>
 
-        <footer style="text-align: left; color: #888; font-size: 0.7rem; padding: 2rem 0; border-top: 1px solid #ddd; font-weight: bold; letter-spacing: 1px;">
-            &copy; 2026 REGISTRATION OFFICE | BANHARNJAMSAIWITTAYA 1 SCHOOL | ICT DEPARTMENT
+        <footer style="text-align: center; color: #888; font-size: 0.75rem; padding: 2rem 0;">
+            &copy; 2026 REGISTRATION OFFICE | BANHARNJAMSAIWITTAYA 1 SCHOOL
         </footer>
     </main>
 </div>
@@ -273,7 +229,10 @@
             document.getElementById("seconds").innerText = Math.floor((diff % (1000 * 60)) / 1000).toString().padStart(2, '0');
         }
     }
-    function showTime() { document.getElementById("current-time").innerText = new Date().toLocaleString('th-TH'); }
+    function showTime() { 
+        const el = document.getElementById("current-time");
+        if(el) el.innerText = new Date().toLocaleString('th-TH'); 
+    }
     setInterval(updateTimer, 1000); setInterval(showTime, 1000);
     updateTimer(); showTime();
 </script>
